Fixed scrollbar contrast

--- a/SimpleSeer/static/app/styles/application.less
+++ b/SimpleSeer/static/app/styles/application.less
@@ -77,17 +77,17 @@ body {
 }
 
 body {
-  *::-webkit-scrollbar { width: 12px; background-color: #414141; }
-  *::-webkit-scrollbar-corner { background-color: #d1d1d1; }
+  *::-webkit-scrollbar { width: 12px; background-color: #404040; }
+  *::-webkit-scrollbar-corner { background-color: #e0e0e0; }
   *::-webkit-scrollbar-thumb {
     background: #888 url("/img/seer/grippy.png") no-repeat center center;
-    border: 1px solid #444;
+    border: 1px solid #404040;
     &:horizontal { border-width: 1px 0 0 0; }
     &:vertical { border-width: 0 0 0 1px; }
   }
   *::-webkit-scrollbar-track {
     border: 1px solid #555;
-    background-color: #d1d1d1;
+    background-color: #e0e0e0;
     &:horizontal { border-width: 1px 0 0 0; }
     &:vertical { border-width: 0 0 0 1px; }
   }
